replaced react with angular

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         </div>
         <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-4x fa-react text-primary mb-4"></i>
-            <h3 class="h4 mb-2">React</h3>
-            <p class="text-muted mb-0">Using libraries and frameworks help simplify the easy stuff to work on solving more complex problems.</p>
+            <i class="fab fa-4x fa-angular text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Angular</h3>
+            <p class="text-muted mb-0">Using a robust front-end framework helps simplify the easy stuff to work on solving more complex problems.</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 text-center">
