--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
+          <img src="./img/Neha-headshot.jpg" id="headshot" alt="professional headshot of Neha"/>
           <h1 class="text-uppercase text-white font-weight-bold">Neha Nautiyal</h1>
           <hr class="divider my-4">
         </div>
